src/client/scss/sections/pools.scss
.pools {
  background-color: $xdsGreyBlue;
  padding: 50px 0px;
  @media screen and (max-width: 1900px){
    padding: 80px 0px;
  }
  display: flex;
  flex-direction: column;
  align-items: center;
}
.pools_section {
  padding: 20px 180px;
  @media screen and (max-width: 1900px){
    padding: 30px 80px;
  }
}
.pools_section_title {
  font-family: Poppins;
  font-size: 40px;
  font-style: normal;
  font-weight: 700;
  line-height: 52px;
  letter-spacing: -0.04em;
  color: #ffffff;
  margin: 0px 0px 35px 0px;
}
.pools_blocks {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: flex-start;
}
.pool_block {
  margin-top: 2%;
  max-width: 402px;
  min-height: 344px;
  background: $xdsVeryDarkBg;
  border: 2px solid $xdsAccent;
  backdrop-filter: blur(4px);
  border-radius: $xdsBorderRadius;
  padding: 2% 1.5%;
}
.pool_block_title {
  display: flex;
  padding: 0px 0px 10px 10px;
  img {
    margin-right: 10px;
  }
  h4 {
    font-family: Poppins;
    font-size: 25px;
    font-style: normal;
    font-weight: 600;
    line-height: 29px;
    letter-spacing: -0.04em;
    color: #ffffff;
  }
}
.pool_info {
  background: $xdsGreyBlue;
  border-radius: 10px;
  margin: 0 auto;
  height: 161px;
  padding: 15px 20px 10px 20px;
}
.pool_info_top {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}
.progress_bar_wrap {
  width: 276px;
  height: 10px;
  background: #122026;
  border-radius: 100px;
  position: relative;
  // first progress
  .progress_bar_green2 {
    position: absolute;
    width: 35%;
    height: 10px;
    top: 0;
    left: 0;
    background: $xdsAccent;
    border-radius: 100px;
    p {
      font-family: Poppins;
      font-size: 11px;
      font-style: normal;
      font-weight: 500;
      color: $xdsAccent;
      letter-spacing: -0.04em;
      text-align: right;
      margin-top: -20px;
    }
  }
  .progress_counter {
    position: absolute;
    top: -22px;
    right: 0px;
    span {
      font-family: Poppins;
      font-size: 8px;
      font-style: normal;
      font-weight: 500;
      letter-spacing: -0.04em;
      text-align: center;
      color: #ffffff;
    }
  }

  // second progress
  .progres_bar-green {
    position: absolute;
    width: 16px;
    height: 10px;
    top: 0;
    left: 0;
    background: $xdsAccent;
    border-radius: 100px;
  }
  .progres_bar-red {
    position: absolute;
    width: 16px;
    height: 10px;
    top: 0;
    right: 0;
    background: #ff0f65;
    border-radius: 100px;
  }
  .min {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: absolute;
    top: -12px;
    left: 50px;
    span {
      width: 1px;
      background: #ffffff;
      height: 8px;
      margin-top: -8px;
    }
    p {
      font-family: Poppins;
      font-size: 8px;
      font-style: normal;
      font-weight: 500;
      letter-spacing: -0.04em;
      text-align: center;
      color: #ffffff;
    }
  }
  .yes {
    position: absolute;
    top: -8px;
    left: 0;
    font-family: Poppins;
    font-size: 11px;
    font-style: normal;
    font-weight: 500;
    line-height: 52px;
    letter-spacing: -0.04em;
    color: #ffffff;
  }
  .no {
    position: absolute;
    top: -8px;
    right: 0;
    font-family: Poppins;
    font-size: 11px;
    font-style: normal;
    font-weight: 500;
    line-height: 52px;
    letter-spacing: -0.04em;
    color: #ffffff;
  }
}

.pool_like {
  width: 40.29px;
  height: 40.29px;
  background: $xdsAccent;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  border: none;
  margin-left: 15px;
  position: relative;
  span {
    position: absolute;
    bottom: -40px;
    font-family: Poppins;
    font-size: 11px;
    font-style: normal;
    font-weight: 500;
    line-height: 52px;
    letter-spacing: -0.04em;
    color: #ffffff;
  }
}
.pool_info_btm {
  margin-top: 50px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: flex-start;
  width: 100%;
  span {
    font-family: Poppins;
    font-size: 20px;
    font-style: normal;
    font-weight: 700;
    letter-spacing: -0.04em;
    color: $xdsAccent;
  }
  p {
    font-family: Poppins;
    font-size: 15px;
    font-style: normal;
    font-weight: 500;
    letter-spacing: -0.04em;
    color: #ffffff;
  }
}
.pool_links {
  width: 100%;
  margin-top: 15px;
  padding: 0 20px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  .pool_share {
    width: 120px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    a {
      transition: $transition;
      &:hover {
        filter: brightness(160%);
      }
    }
  }
  button {
    font-family: Poppins;
    font-size: 13px;
    font-style: normal;
    font-weight: 500;
    letter-spacing: -0.04em;
    color: #ffffff;
    width: 127px;
    height: 51px;
  }
}
.all_pools_btn {
  width: 227px;
  height: 68px;
  margin: 0 auto;
  margin-top: 50px;
  font-family: Poppins;
  font-size: 20px;
  font-style: normal;
  font-weight: 500;
  line-height: 17px;
  letter-spacing: -0.02em;
  color: #ffffff;
}

